# SimpleNetMessaging

./: CMakeLists.txt
apps/: CMakeLists.txt  demo.cpp
include/SimpleNetMessaging/: DataType.h  Message.h  MessageSerializer.h  Types.h  Variable.h  VariableDisplay.h
src/: CMakeLists.txt  DataType.cpp  Message.cpp  MessageSerializer.cpp  Variable.cpp  VariableDisplay.cpp
